<resources>
    <string name="app_name">VideoStudium</string>
    <string name="lbl1User">Usuario:</string>
    <string name="lbl1Pass">Contraseña:</string>
    <string name="btn1Enter">Entrar</string>
    <string name="autorizado">Acceso autorizado</string>
    <string name="denegado">Acceso denegado</string>
    <string name="cat1">Acción</string>
    <string name="cat2">Drama</string>
    <string name="cat3">Ciencia Ficción</string>
    <string name="administrador">Admin-Admin</string>
    <string name="usuario1">Cifredo-Studium01</string>
    <string name="usuario2">Gonzalez-Studium02</string>
    <string name="usuario3">Baena-Studium03</string>
    <string name="usuario4">Sureda-Studium04</string>
    <string name="salir">Vuelva a presionar para salir</string>
    <string-array name="spinCriticas">
        <item>Ver críticas:</item>
        <item>Filmaffinity</item>
        <item>IMDB</item>
        <item>RottenTomatoes</item>
    </string-array>
    <string-array name="spnGeneros">
        <item>Seleccione un género</item>
        <item>Acción</item>
        <item>Drama</item>
        <item>Ciencia Ficción</item>
    </string-array>
    <string name="lbl4TituloPelicula">Terminator</string>
    <string name="lbl4AnoPelicula">1984</string>
    <string name="lbl4PaisPelicula">Estados Unidos</string>
    <string name="lbl4DirectorPelicula">James Cameron</string>
    <string name="lbl4InfoPelicula1">Los Ángeles, año 2029. Las máquinas dominan el mundo. Los rebeldes que luchan contra ellas tienen como líder a John Connor, un hombre que nació en los años ochenta. Para acabar con la rebelión, las máquinas deciden enviar al pasado a un robot -Terminator- cuya misión será eliminar a Sarah Connor, la madre de John, e impedir así su nacimiento.</string>
    <string name="btn4Alquiler">Alquilar</string>
    <string name="btn4AccEnlaces">Ir</string>
    <string name="wlc">Bienvenido,</string>
    <string name="volver2">Volver</string>
    <string name="casa">Casa</string>
    <string name="imagenInfo">Cartel</string>
    <string name="Seleccionar2">Seleccionar</string>
    <string name="lbl4lblPais">País:</string>
    <string name="lbl4lblAnio">Año:</string>
    <string name="lbl4lblDirector">Director:</string>
    <string name="tituloAC1">Gladiator</string>
    <string name="duracionAC1">150 min.</string>
    <string name="paisAC1">Estados Unidos </string>
    <string name="anioAC1">2000</string>
    <string name="directorAC1">Ridley Scott</string>
    <string name="sinopsisAC1">En el año 180, el Imperio Romano domina todo el mundo conocido. Tras una gran victoria sobre los bárbaros del norte, el anciano emperador Marco Aurelio (Richard Harris) decide transferir el poder a Máximo (Russell Crowe), bravo general de sus ejércitos y hombre de inquebrantable lealtad al imperio. Pero su hijo Cómodo (Joaquin Phoenix), que aspiraba al trono, no lo acepta y trata de asesinar a Máximo. </string>
    <string name="urlFilmAC1">https://www.filmaffinity.com/es/film392075.html</string>
    <string name="urlIMDBAC1">http://www.imdb.com/title/tt0172495/?ref_=fn_al_tt_1</string>
    <string name="urlRTAC1">https://www.rottentomatoes.com/m/gladiator</string>
    <string name="tituloAC2">Reservoir Dogs</string>
    <string name="duracionAC2">99 min.</string>
    <string name="paisAC2">Estados Unidos</string>
    <string name="anioAC2">1992</string>
    <string name="directorAC2">Quentin Tarantino</string>
    <string name="sinopsisAC2">Una banda organizada es contratada para atracar una empresa y llevarse unos diamantes. Sin embargo, antes de que suene la alarma, la policía ya está allí. Algunos miembros de la banda mueren en el enfrentamiento con las fuerzas del orden, y los demás se reúnen en el lugar convenido.</string>
    <string name="urlFilmAC2">https://www.filmaffinity.com/es/film137887.html</string>
    <string name="urlIMDBAC2">http://www.imdb.com/title/tt0105236/?ref_=nv_sr_1</string>
    <string name="urlRTAC2">https://www.rottentomatoes.com/m/reservoir_dogs</string>
    <string name="tituloAC3">Terminator</string>
    <string name="duracionAC3">108 min.</string>
    <string name="paisAC3">Estados Unidos</string>
    <string name="anioAC3">1984</string>
    <string name="directorAC3">James Cameron</string>
    <string name="sinopsisAC3">Los Ángeles, año 2029. Las máquinas dominan el mundo. Los rebeldes que luchan contra ellas tienen como líder a John Connor, un hombre que nació en los años ochenta. Para acabar con la rebelión, las máquinas deciden enviar al pasado a un robot -Terminator- cuya misión será eliminar a Sarah Connor, la madre de John, e impedir así su nacimiento. </string>
    <string name="urlFilmAC3">https://www.filmaffinity.com/es/film304107.html</string>
    <string name="urlIMDBAC3">http://www.imdb.com/title/tt0088247/?ref_=fn_al_tt_1</string>
    <string name="urlRTAC3">https://www.rottentomatoes.com/franchise/terminator</string>
    <string name="tituloAC4">Shooter</string>
    <string name="duracionAC4">124 min.</string>
    <string name="paisAC4">Estados Unidos</string>
    <string name="anioAC4">2007</string>
    <string name="directorAC4">Antoine Fuqua</string>
    <string name="sinopsisAC4">Bob Lee Swagger (Mark Whalberg) es un ex-tirador de élite del ejército de los Estados Unidos que abandona las fuerzas armadas después del fracaso de una misión extraoficial. Cuando le piden que se reincorpore, regresa al servicio a regañadientes, pero vuelven a engañarlo. A pesar de llevar dos balas en el cuerpo y de ser el objetivo de una caza a nivel nacional, Swagger planea su venganza... </string>
    <string name="urlFilmAC4">https://www.filmaffinity.com/es/film609118.html</string>
    <string name="urlIMDBAC4">http://www.imdb.com/title/tt0822854/?ref_=nv_sr_2</string>
    <string name="urlRTAC4">https://www.rottentomatoes.com/m/shooter</string>
    <string name="tituloAC5">Léon</string>
    <string name="duracionAC5">106 min.</string>
    <string name="paisAC5">Francia</string>
    <string name="anioAC5">1994</string>
    <string name="directorAC5">Luc Besson</string>
    <string name="sinopsisAC5">Mathilda es una niña de doce años que no se lleva bien con su familia, excepto con su hermano pequeño. Su padre es un narcotraficante que hace negocios con Stan, un corrupto agente de la D.E.A. (Departamento gubernamental contra las drogas). Un día, mientras Mathilda está en un supermercado, Stan mata a su familia.</string>
    <string name="urlFilmAC5">https://www.filmaffinity.com/es/film629496.html</string>
    <string name="urlIMDBAC5">http://www.imdb.com/title/tt0110413/?ref_=nv_sr_2</string>
    <string name="urlRTAC5">https://www.rottentomatoes.com/m/leon_the_professional</string>
    <string name="tituloDM1">Cadena perpetua</string>
    <string name="duracionDM1">142 min.</string>
    <string name="paisDM1">Estados Unidos </string>
    <string name="anioDM1">1994</string>
    <string name="directorDM1">Frank Darabont</string>
    <string name="sinopsisDM1">Acusado del asesinato de su mujer, Andrew Dufresne (Tim Robbins), tras ser condenado a cadena perpetua, es enviado a la cárcel de Shawshank. Con el paso de los años conseguirá ganarse la confianza del director del centro y el respeto de sus compañeros de prisión, especialmente de Red (Morgan Freeman), el jefe de la mafia de los sobornos. </string>
    <string name="urlFilmDM1">https://www.filmaffinity.com/es/film161026.html</string>
    <string name="urlIMDBDM1">http://www.imdb.com/title/tt0111161/</string>
    <string name="urlRTDM1">https://www.rottentomatoes.com/m/shawshank_redemption/</string>
    <string name="tituloDM2">Casablanca</string>
    <string name="duracionDM2">102 min.</string>
    <string name="paisDM2">Estados Unidos</string>
    <string name="anioDM2">1942</string>
    <string name="directorDM2">Michael Curtiz</string>
    <string name="sinopsisDM2">Años 40. A consecuencia de la Segunda Guerra Mundial, Casablanca era una ciudad a la que llegaban huyendo del nazismo gente de todas partes: llegar era fácil, pero salir era casi imposible, especialmente si el nombre del fugitivo figuraba en las listas de la Gestapo, que presionaba a la autoridades francesas al mando del corrupto inspector Renault. En este caso, el objetivo de la policía secreta alemana es el líder checo y héroe de la resistencia Victor Laszlo, cuya única esperanza es Rick Blaine, propietario del "Rick’s Café" y antiguo amante de su mujer, Ilsa Lund. Rick e Ilsa se habían conocido en París, pero la entrada de las tropas alemanas en la capital francesa les separó.</string>
    <string name="urlFilmDM2">https://www.filmaffinity.com/es/film165208.html</string>
    <string name="urlIMDBDM2">http://www.imdb.com/title/tt0034583/?ref_=nv_sr_1</string>
    <string name="urlRTDM2">https://www.rottentomatoes.com/m/1003707_casablanca?</string>
    <string name="tituloDM3">Cisne Negro</string>
    <string name="duracionDM3">109 min.</string>
    <string name="paisDM3">Estados Unidos</string>
    <string name="anioDM3">2010</string>
    <string name="directorDM3">Darren Aronofsky</string>
    <string name="sinopsisDM3">Nina (Natalie Portman), una brillante bailarina que forma parte de una compañía de ballet de Nueva York, vive completamente absorbida por la danza. La presión de su controladora madre (Barbara Hershey), la rivalidad con su compañera Lily (Mila Kunis) y las exigencias del severo director (Vincent Cassel) se irán incrementando a medida que se acerca el día del estreno. Esta tensión provoca en Nina un agotamiento nervioso y una confusión mental que la incapacitan para distinguir entre realidad y ficción. </string>
    <string name="urlFilmDM3">https://www.filmaffinity.com/es/film458406.html</string>
    <string name="urlIMDBDM3">http://www.imdb.com/title/tt0947798/?ref_=nv_sr_1</string>
    <string name="urlRTDM3">https://www.rottentomatoes.com/m/black_swan_2010</string>
    <string name="tituloDM4">Lo Imposible</string>
    <string name="duracionDM4">107 min.</string>
    <string name="paisDM4">España</string>
    <string name="anioDM4">2012</string>
    <string name="directorDM4">José Antonio Bayona</string>
    <string name="sinopsisDM4">Diciembre del año 2004. María (Naomi Watts), Henry (Ewan McGregor) y sus tres hijos pequeños vuelan desde Japón a Tailandia para pasar las vacaciones de Navidad en la playa. Una mañana, mientras se encuentran todos en la piscina del complejo a orillas del mar, un tremendo tsunami destroza el hotel y gran parte de la costa del sudeste asiático. Este desastre cambió para siempre la vida de millones de personas. Esta es sólo la historia de una familia.</string>
    <string name="urlFilmDM4">https://www.filmaffinity.com/es/film329915.html</string>
    <string name="urlIMDBDM4">http://www.imdb.com/title/tt1649419/?ref_=nv_sr_1</string>
    <string name="urlRTDM4">https://www.rottentomatoes.com/m/the_impossible_2012</string>
    <string name="tituloDM5">Titanic</string>
    <string name="duracionDM5">195 min.</string>
    <string name="paisDM5">Estados Unidos</string>
    <string name="anioDM5">1997</string>
    <string name="directorDM5">James Cameron</string>
    <string name="lbl5Seleccionar">Seleccione el metodo de pago:</string>
    <string name="lbl5Importe">Importe: 3.65€</string>
    <string name="lbl5MetodoPago1">Tarjeta</string>
    <string name="lbl5MetodoPago2">Efectivo</string>
    <string name="lbl5MetodoPago3" translatable="false">PayPal</string>
    <string name="btn5Pagar">Pagar</string>
</resources>