<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.uno.practicaandroid.MetodoPago">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn5Home"
            style="@style/BtnImagen"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:onClick="mostrarInicio"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/btn5Back"
            style="@style/BtnImagen"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:onClick="mostrarListaPeliculas"
            app:srcCompat="@drawable/backarrow" />

        <TextView
            android:id="@+id/lbl5Seleccionar"
            android:layout_width="275dp"
            android:layout_height="35dp"
            android:layout_below="@+id/btn5Home"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="127dp"
            android:text="@string/lbl5Seleccionar"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbl5Importe"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lbl5Precio"
            android:layout_toStartOf="@+id/btn5Pagar"
            android:text="@string/lbl5Importe"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbl5Precio"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_alignStart="@+id/lbl5Importe"
            android:layout_below="@+id/rg5Pago" />

        <Button
            android:id="@+id/btn5Pagar"
            style="@style/BtnNormal"
            android:layout_alignEnd="@+id/btn5Home"
            android:layout_alignTop="@+id/btn5Back"
            android:onClick="mostrarFinCompra"
            android:text="@string/btn5Pagar" />

        <TextView
            android:id="@+id/lbl5PeliculaAlquilada"
            android:layout_width="175dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btn5Home"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:gravity="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg5Pago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/lbl5Seleccionar"
            android:layout_below="@+id/lbl5Seleccionar">

            <RadioButton
                android:id="@+id/rb5Tarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl5MetodoPago1" />

            <RadioButton
                android:id="@+id/rb5Efectivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl5MetodoPago2" />

            <RadioButton
                android:id="@+id/rb5Paypal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl5MetodoPago3" />

        </RadioGroup>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
