<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.uno.practicaandroid.FichaPeliculas">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/img4Pelicula"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/imagenInfo"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/lbl4lblPais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/lbl4AnioPelicula"
            android:layout_below="@+id/img4Pelicula"
            android:text="@string/lbl4lblPais" />

        <TextView
            android:id="@+id/lbl4TituloPelicula"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_alignTop="@+id/iBtn4Home"

            android:layout_toEndOf="@+id/lbl4PaisPelicula"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbl4lblAnio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lbl4AnioPelicula"
            android:layout_alignStart="@+id/lbl4lblPais"
            android:text="@string/lbl4lblAnio" />

        <TextView
            android:id="@+id/lbl4AnioPelicula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lbl4DirectorPelicula"
            android:layout_alignEnd="@+id/lbl4PaisPelicula"
            android:layout_marginBottom="38dp"
            android:layout_marginEnd="28dp" />

        <TextView
            android:id="@+id/lbl4lblDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lbl4DirectorPelicula"
            android:layout_alignEnd="@+id/lbl4PaisPelicula"
            android:layout_marginEnd="13dp"
            android:text="@string/lbl4lblDirector" />

        <TextView
            android:id="@+id/lbl4PaisPelicula"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_alignStart="@+id/img4Pelicula"
            android:layout_below="@+id/img4Pelicula"
            android:layout_marginTop="22dp" />

        <TextView
            android:id="@+id/lbl4DirectorPelicula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lbl4SinopsisPelicula"
            android:layout_alignStart="@+id/spn4EnlacesPeliculas"
            android:layout_marginBottom="44dp" />

        <TextView
            android:id="@+id/lbl4SinopsisPelicula"
            android:layout_width="200dp"
            android:layout_height="275dp"
            android:layout_alignStart="@+id/lbl4TituloPelicula"
            android:layout_centerVertical="true"

            android:scrollbars="vertical" />

        <ImageButton
            android:id="@+id/iBtn4Home"
            style="@style/BtnImagen"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/casa"
            android:onClick="mostrarInicio"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/iBtn4Back"
            style="@style/BtnImagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/volver2"
            android:onClick="volverAtras"
            app:srcCompat="@drawable/backarrow" />

        <Button
            android:id="@+id/btn4Alquiler"
            style="@style/BtnNormal"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/iBtn4Home"

            android:layout_below="@+id/spn4EnlacesPeliculas"
            android:text="@string/btn4Alquiler" />

        <Spinner
            android:id="@+id/spn4EnlacesPeliculas"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="18dp"
            android:layout_below="@+id/lbl4DirectorPelicula" />

        <Button
            android:id="@+id/btn4AccEnlaces"
            style="@style/BtnNormal"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/iBtn4Home"
            android:layout_alignTop="@+id/spn4EnlacesPeliculas"
            android:onClick="accederEnlace"
            android:text="@string/btn4AccEnlaces" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
